Change index to make the site work

--- a/build_output/index.html
+++ b/build_output/index.html
@@ -130,7 +130,7 @@ Friends of Streatham Common</h4>
 
 <ul id="navbar">
 	<li><a href="directions.html">How to get there</a></li>
-	<li><a href="gallery/">Photo &amp; Video Gallery</a> </li>
+	<li><a href="gallery.html">Photo &amp; Video Gallery</a> </li>
 </ul>
 
 <h2>Make Your Own Kite</h2>
