Change gallery link

--- a/build_output/directions.html
+++ b/build_output/directions.html
@@ -95,7 +95,7 @@ output=embed"></iframe>
 
 <ul id="navbar">
 	<li><a href="index.html">Home</a></li>
-	<li><a href="gallery/">Photo &amp; Video Gallery</a> </li>
+	<li><a href="gallery.html">Photo &amp; Video Gallery</a> </li>
 </ul>
 
 <h2>Make Your Own Kite</h2>
