--- a/build_output/review.html
+++ b/build_output/review.html
@@ -38,13 +38,13 @@ p {font-size: 0.8em; line-height: 1.5; margin-bottom: 1em;}
 
 <h1>Streatham Kite Festival 2011</h1>
 
-<img src="albums/album07/IMG_3645.thumb.jpg" width="100" height="150" alt="Bob Colover" class="floatr">
+<img src="../gallery/2011/Stephen Hodges 2011/IMG_3645.jpg" width="100" height="150" alt="Bob Colover" class="floatr">
 
 <p>The weather was looking excellent for the day, Peter Hale and I made an early start as we had the awkward journey going straight through London, Park Lane, Victoria, Brixton, Streatham. But the journey was very worthwhile as Bob Colover organised an excellent festival.</p>
 
 <p>The altitude sprint was at 11.30am about half a dozen people entered, the judge was Gavin. I won this again but I did decide to give the prize (a bottle of Old Speckled Hen) to the kite flyer that came 2nd &ndash; that was Chris Head of Sky Symphony with his large white well worn Delta&hellip;cheers.</p>
 
-<img src="albums/album07/IMG_3686.thumb.jpg" width="150" height="100" alt="Sky Symphony" class="floatl">
+<img src="../gallery/2011/Stephen Hodges 2011/IMG_3686.jpg" width="150" height="100" alt="Sky Symphony" class="floatl">
 
 <p>Sky Symphony (otherwise known as <em>'The Kite Flying Red Arrows'</em>) formed in 2000 were the display team for the festival. With excellent flying with their custom built T4s, the gentle wind seemed perfect for them &ndash; well done.</p>
 
@@ -52,7 +52,7 @@ p {font-size: 0.8em; line-height: 1.5; margin-bottom: 1em;}
 
 <p>Music on the PA was brilliant &ndash; Pink Floyd, Jimmy Hendrix, 60's bands, my sort of music, plus some Indian music.</p>
 
-<img src="albums/album07/IMG_3587.thumb.jpg" width="100" height="150" alt="Jamaican flag roller" class="floatr">
+<img src="../gallery/2011/Stephen Hodges 2011/IMG_3587.jpg" width="100" height="150" alt="Jamaican flag roller" class="floatr">
 
 <p>A group of about four Indian kite flyers put on a display, flying many hundreds of feet. Carl Robershaw was having fun with his Rev, great to watch. A green and black Jamaican flag roller looked good in the sky as well as the giant kites from the BKF.</p>
 
