Updated to say it's off this year

--- a/build_output/index.html
+++ b/build_output/index.html
@@ -29,19 +29,16 @@
 
 <div class="header">
 
-<h1>The 23rd Streatham <div>Kite Day</div></h1>
+<h1>Streatham <div>Kite Day</div></h1>
 
-<h4>Sunday 12th May 2024<br>
-11:00 - 17:00 | free entry<br>
-<br>
-Streatham Common<br>
+<h4><br>Streatham Common<br>
 SW16 3BU<br>
 <br>
 streathamkiteday.org.uk<br>
-<br>
+<br><br><br>
 Sponsored by<br>
 PPL/PRS<br>
-Friends of Streatham Common</h4>
+Friends of Streatham Common<br></h4>
 
 <div class="header-logos">
 <a href="https://pplprs.co.uk/" target="_blank"><img src="images/ppl-prs-s.png" width="" height="100" alt="PPL/PRS United for Music" class="lambeth"></a><a href="http://streathamcommon.org/" target="_blank"><img src="images/FOSC-logo.png" width="100" height="100" alt="Friends of Streatham Common" class="fosk"></a>
@@ -51,46 +48,15 @@ Friends of Streatham Common</h4>
 
 <div class="content">
 
-<h2>23rd Streatham Kite Day</h2>
+<h2>Streatham Common Kite Day 2025</h2>
 
-<p><strong>The date we have fixed for the 23rd Streatham Common Kite Day is Sunday 12th May 2024.</strong></p>
+<h5>It is with much regret that we have to inform you that there will be no Streatham Common Kite Day in 2025.</h5>
 
-<p><strong>A great FREE event for all Streathamites, kite fans and those who want a fun day out from further afield. It has everything&hellip;music, food&hellip;and kites!</strong></p>
+<p>We thank you so much for coming and supporting and performing for us in the past.</p>
 
-<p><strong>Volunteers will be needed so if you want to join in  &ndash; please let us know. We can only make it happen with the community being a part of it. its good fun and you get to be part of a really important Streatham Event.</strong></p>
+<p>We are planning a break this year with a return in May 2026.</p>
 
-<div class="floatr poster" style="">
-
-<img src="images/KiteDayPoster2024.png" width="225" height="318" alt="Kite Day 2024 poster">
-
-<p>Download a copy of the 2024 poster:</p>
-
-<ul>
-	<li><a href="downloads/KiteDayPoster2024.jpg" onclick="window.open(this.href,'','');return false;">JPG - 142KB</a></li>
-	<li><a href="downloads/KiteDayPoster2024.pdf" onclick="window.open(this.href,'','');return false;">PDF - 697KB</a></li>
-</ul>
-
-</div>
-
-<!-- <p>A list of what&rsquo;s happening in the arena will be posted at a later date.</p>
-
-<p>In the meantime if you have any questions please use the contact details below.</p> -->
-
-<p>The event features kite flying by experts including <a href="http://brightonkiteflyers.co.uk/" target="_blank">Brighton Kite Flyers</a> - enthusiasts from all around the world flying kites of all shapes and sizes from a postage stamp through to a life size blue whale over 30 meters long, <a href="https://www.facebook.com/teamspectrumkites" target="_blank">Team SPECTRUM</a> –  dancing their kites to music in routines that astound and astonish, the <a href="https://flyingfishkites.blogspot.co.uk/" target="_blank">Flying Fish</a> – a husband and wife double act who have been former UK National Champions, and NASAman – whose kite helps lift him up into the sky - but not quite into space.</p>
-
-<p>Streatham Common Kite Day is not just for the experts. Bring a kite or buy one at the pop-up kite shops and fly it there over the Common.</p>
-
-<p><strong>BRING YOUR OWN KITES ON THE DAY FOR A SKY FULL OF COLOUR.</strong></p>
-
-<p>If you don&rsquo;t own a kite, <a href="https://reeddesign.co.uk/kites/kitemaking/" target="_blank">why not make one</a> or buy one at the festival?</p>
-
-<p>Kite Day is the ideal family day-out with a range of food stands &ndash; this year we have incredible world flavours from our food trucks and stalls. Everything from Caribbean to Brazilian recipes, super tasty Vegan creations, Indian street food to Italian Pizza, Hog Roasts to Fish dishes, Beef brisket naan wraps to traditional festival favourites &ndash; Hotdogs, toasties and good old fashioned Mr Whippy ice cream. All washed down with Streatham&rsquo;s finest coffee and home-made cakes. There is also plenty of room for picnics.</p>
-
-<p>Once the food has been digested there are bouncy castles and face painting for children. Community groups are well represented with stalls for the curious visitor keen to find out more about the area or join one of the area's local groups or societies.</p>
-
-<p style="text-align: center; font-weight: bold; width: 87.5%; margin-left: auto; margin-right: auto;">We are planning to make this event as green as possible. We have food vans on the day selling a fantastic range of food. But if you&rsquo;re bringing your own picnic, leave zero trace. Please expect to take every bit of packaging back with you to recycle. The common will have litter pickers on the day &ndash; <br>BUT WE DO NOT HAVE THE FACILITIES TO RECYCLE.</p>
-
-<!--<p><a href="pdfs/PressRelease-KiteDay-May2023.pdf" target="_blank" title="Downlaod a press release in PDF format">Press Release - May 2023</a></p>-->
+<p>The Friends of Streatham Common and the Kite Day Team</p>
 
 <h3>Friends of Streatham Common</h3>
 
