--- a/build_output/directions.html
+++ b/build_output/directions.html
@@ -23,22 +23,19 @@
 
 <div class="header">
 
-<h1>The 23rd Streatham <div>Kite Day</div></h1>
+<h1>Streatham <div>Kite Day</div></h1>
 
-<h4>Sunday 12th May 2023<br>
-11:00 - 17:00 | free entry<br>
-<br>
-Streatham Common<br>
+<h4><br>Streatham Common<br>
 SW16 3BU<br>
 <br>
 streathamkiteday.org.uk<br>
-<br>
+<br><br><br>
 Sponsored by<br>
-PPL/PRS<br>
-Friends of Streatham Common</h4>
+<!-- PPL/PRS<br> -->
+Friends of Streatham Common<br></h4>
 
 <div class="header-logos">
-<a href="https://pplprs.co.uk/" target="_blank"><img src="images/ppl-prs-s.png" width="" height="100" alt="PPL/PRS United for Music" class="lambeth"></a><a href="http://streathamcommon.org/" target="_blank"><img src="images/FOSC-logo.png" width="100" height="100" alt="Friends of Streatham Common" class="fosk"></a>
+<!-- <a href="https://pplprs.co.uk/" target="_blank"><img src="images/ppl-prs-s.png" width="" height="100" alt="PPL/PRS United for Music" class="lambeth"></a> --><a href="http://streathamcommon.org/" target="_blank"><img src="images/FOSC-logo.png" width="100" height="100" alt="Friends of Streatham Common" class="fosk"></a>
 </div>
 
 </div> <!-- end .header -->
@@ -105,9 +102,9 @@ output=embed"></iframe>
 <p><a href="http://reeddesign.co.uk/kites/kitemaking/index.html" target="_blank"><img src="images/sled2.jpg" width="187" height="124" alt="sled kite" style="display: block;"> Full instructions can be found here.</a></p>
 </div>
 
-<h2>Sponsors</h2>
+<!-- <h2>Sponsors</h2>
 
-<p class="sponsor"><a href="https://pplprs.co.uk/" target="_blank"><img src="images/ppl-prs.png" width="" height="200" alt="PPL/PRS United for Music" class="lambeth"></a></p>
+<p class="sponsor"><a href="https://pplprs.co.uk/" target="_blank"><img src="images/ppl-prs.png" width="" height="200" alt="PPL/PRS United for Music" class="lambeth"></a></p> -->
 
 <h2>Social</h2>
 
