--- a/build_output/index.html
+++ b/build_output/index.html
@@ -48,13 +48,11 @@ Friends of Streatham Common<br></h4>
 
 <div class="content">
 
-<h2>Streatham Common Kite Day 2025</h2>
+<h2>We are happy to announce that this year’s Streatham Common Kite Day will be on the 10th May 2026 from 11am to 5pm.</h2>
 
-<h5>It is with much regret that we have to inform you that there will be no Streatham Common Kite Day in 2025.</h5>
+<p>We look forward to seeing you there.</p>
 
-<p>We thank you so much for coming and supporting and performing for us in the past.</p>
-
-<p>We are planning a break this year with a return in May 2026.</p>
+<p>More info will follow soon.</p>
 
 <p>The Friends of Streatham Common and the Kite Day Team</p>
 
