--- a/build_output/index.html
+++ b/build_output/index.html
@@ -48,7 +48,7 @@ Friends of Streatham Common<br></h4>
 
 <div class="content">
 
-<h4>We are happy to announce that this year’s Streatham Common Kite Day will be on the 10th May 2026 from 11am to 5pm.</h4>
+<p><b>We are happy to announce that this year’s Streatham Common Kite Day will be on the 10th May 2026 from 11am to 5pm.</b></p>
 
 <p>We look forward to seeing you there.</p>
 
