--- a/build_output/index.html
+++ b/build_output/index.html
@@ -54,6 +54,9 @@ Friends of Streatham Common<br></h4>
 
 <p>More info will follow soon.</p>
 
+<p class="photocredit"><img src="images/DSC_7472.jpg" width="100%" height="auto"><br>
+Photo: Roy Reed</p>
+
 <p>The Friends of Streatham Common and the Kite Day Team</p>
 
 <h3>Friends of Streatham Common</h3>
