--- a/build_output/index.html
+++ b/build_output/index.html
@@ -54,7 +54,7 @@ Friends of Streatham Common<br></h4>
 
 <p>More info will follow soon.</p>
 
-<p class="photocredit"><img src="images/girlwithkite.jpg" width="100%" height="auto"><br>
+<p class="photocredit"><img src="images/girlwithkite.jpg" width="100%" height="auto" alt="girl with kite"><br>
 Photo: Roy Reed</p>
 
 <p>The Friends of Streatham Common and the Kite Day Team</p>
